--- a/user-dashboard/package.json
+++ b/user-dashboard/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "aos": "^2.3.4",
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "react": "^18",
