--- a/user-dashboard/package.json
+++ b/user-dashboard/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0"
   },
