--- a/user-admin/package.json
+++ b/user-admin/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "saas",
+  "name": "user-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.1",
+    "@nivo/line": "^0.84.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@tiptap/extension-color": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
@@ -19,20 +19,18 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
-    "next": "14.0.3",
+    "framer-motion": "^10.17.6",
+    "next": "14.0.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-hot-toast": "^2.4.1",
-    "react-redux": "^9.0.2",
+    "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
