--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "raw-body": "^2.5.2",
+    "stripe": "^14.19.0"
   }
 }
