--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -20,9 +21,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "raw-body": "^2.5.2",
+    "sharp": "^0.33.2",
     "stripe": "^14.19.0"
   }
 }
