--- a/user-admin/package.json
+++ b/user-admin/package.json
@@ -22,7 +22,7 @@
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.8",
     "framer-motion": "^10.17.6",
-    "next": "14.0.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
