--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.0.1",
     "raw-body": "^2.5.2",
     "sharp": "^0.33.2",
+    "socket.io": "^4.7.5",
     "stripe": "^14.19.0"
   }
 }
