--- a/user-admin/package.json
+++ b/user-admin/package.json
@@ -26,12 +26,15 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-easy-infinite-scroll-hook": "^2.1.4",
     "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-redux": "^9.0.4",
     "react-select": "^5.8.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
