--- a/user-dashboard/package.json
+++ b/user-dashboard/package.json
@@ -24,10 +24,12 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.2",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5"
   },
