--- a/user-admin/package.json
+++ b/user-admin/package.json
@@ -22,15 +22,14 @@
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.8",
     "framer-motion": "^10.17.6",
+    "jwt-decode": "^4.0.0",
     "next": "^14.1.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
-    "react-easy-infinite-scroll-hook": "^2.1.4",
     "react-form-stepper": "^2.0.3",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
-    "react-infinite-scroller": "^1.2.6",
     "react-redux": "^9.0.4",
     "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
