--- a/user-dashboard/package.json
+++ b/user-dashboard/package.json
@@ -22,7 +22,9 @@
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.3",
+    "pica": "^9.0.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
