--- a/user-admin/package.json
+++ b/user-admin/package.json
@@ -23,6 +23,8 @@
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.8",
     "framer-motion": "^10.17.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "next": "^14.1.4",
     "pica": "^9.0.1",
